# api/handler/contract.go
@@ -38,8 +38,7 @@ func NewContract(service service.Contract) Contract {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
-// @Param memberId path string true "Member ID"
-// @Param organizationId path string true "Organization ID"
+// @Security BearerAuth
 // @Param RequestContractCreate body model.RequestContractCreate true "Contract Create Request"
 // @Success 201 {object} model.Contract
 // @Failure 400 {object} httperror.HTTPError
@@ -87,7 +86,7 @@ func (a contract) Create(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
-// @Param organizationId path string true "Organization ID"
+// @Security BearerAuth
 // @Param platformId query string false "Platform ID"
 // @Success 200 {array} model.Contract
 // @Failure 500 {object} httperror.HTTPError
@@ -113,7 +112,7 @@ func (a contract) GetAll(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
-// @Param organizationId path string true "Organization ID"
+// @Security BearerAuth
 // @Param id path string true "Contract ID"
 // @Success 200 {object} model.Contract
 // @Failure 400 {object} httperror.HTTPError
@@ -143,8 +142,7 @@ func (a contract) Get(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
-// @Param memberId path string true "Member ID"
-// @Param organizationId path string true "Organization ID"
+// @Security BearerAuth
 // @Param id path string true "Contract ID"
 // @Success 200 {object} model.Contract
 // @Failure 400 {object} httperror.HTTPError
@@ -179,8 +177,7 @@ func (a contract) Deactivate(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
-// @Param memberId path string true "Member ID"
-// @Param organizationId path string true "Organization ID"
+// @Security BearerAuth
 // @Param id path string true "Contract ID"
 // @Success 200 {object} model.Contract
 // @Failure 400 {object} httperror.HTTPError
@@ -215,8 +212,7 @@ func (a contract) Reactivate(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
-// @Param memberId path string true "Member ID"
-// @Param organizationId path string true "Organization ID"
+// @Security BearerAuth
 // @Param id path string true "Contract ID"
 // @Param RequestContractUpdate body model.RequestContractUpdate true "Contract Update Request"
 // @Success 200 {object} model.Contract
