# api/handler/login.go
@@ -82,6 +82,7 @@ func (l login) Login(c echo.Context) error {
 // @Tags Login
 // @Produce  json
 // @Security RefreshTokenAuth
+// @Security RefreshBearerAuth
 // @Success 200 {object} service.MemberCreateResponse
 // @Failure 401 {object} httperror.HTTPError
 // @Failure 500 {object} httperror.HTTPError
@@ -123,6 +124,7 @@ func (l login) RefreshToken(c echo.Context) error {
 // @Summary Logout
 // @Tags Login
 // @Security RefreshTokenAuth
+// @Security RefreshBearerAuth
 // @Success 204
 // @Failure 500 {object} httperror.HTTPError
 // @Router /login/logout [post]
