# api/handler/member.go
@@ -36,6 +36,7 @@ func NewMember(services service.Services) Member {
 // @Tags Member
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Success 200 {array} repository.OrganizationMemberWithRole
 // @Failure 500 {object} httperror.HTTPError
 // @Router /members [get]
@@ -57,6 +58,7 @@ func (a member) GetAll(c echo.Context) error {
 // @Tags Member
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Param id path string true "Member ID"
 // @Success 200 {object} repository.OrganizationMemberWithRole
 // @Failure 400 {object} httperror.HTTPError
@@ -92,6 +94,7 @@ func (a member) Get(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Param id path string true "Member ID"
 // @Param body body model.RequestMemberUpdateOther true "Update Member Request"
 // @Success 200 {object} repository.OrganizationMemberWithRole
@@ -130,6 +133,7 @@ func (a member) Update(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Param body body model.RequestMemberUpdateSelf true "Update Self Request"
 // @Success 200 {object} repository.OrganizationMemberWithRole
 // @Failure 400 {object} httperror.HTTPError
@@ -170,6 +174,7 @@ func (a member) UpdateSelf(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Param id path string true "Member ID"
 // @Param body body model.RequestTransferOwnership true "Transfer Ownership Request"
 // @Success 200 {object} repository.OrganizationMemberWithRole
@@ -207,6 +212,7 @@ func (a member) TransferOwnership(c echo.Context) error {
 // @Tags Member
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Param id path string true "Member ID"
 // @Success 200 {object} repository.OrganizationMemberWithRole
 // @Failure 400 {object} httperror.HTTPError
@@ -240,6 +246,7 @@ func (a member) Deactivate(c echo.Context) error {
 // @Tags Member
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Param id path string true "Member ID"
 // @Success 200 {object} repository.OrganizationMemberWithRole
 // @Failure 400 {object} httperror.HTTPError
@@ -269,6 +276,7 @@ func (a member) Reactivate(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Param body body model.RequestPasswordResetEmail true "Password Reset Email Request"
 // @Success 200 {object} map[string]string "Email sent message"
 // @Failure 400 {object} httperror.HTTPError
@@ -301,6 +309,7 @@ func (a member) SendPasswordResetEmail(c echo.Context) error {
 // @Accept  json
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Param body body model.RequestPasswordReset true "Password Reset Request"
 // @Success 200 {object} map[string]string "Password reset message"
 // @Failure 400 {object} httperror.HTTPError
