# api/handler/network.go
@@ -26,6 +26,7 @@ func NewNetwork(service service.Network) Network {
 // @Tags Network
 // @Produce  json
 // @Security JWTAuth
+// @Security BearerAuth
 // @Success 200 {array} model.NetworkData
 // @Failure 500 {object} httperror.HTTPError
 // @Router /networks [get]
